--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Thumbnail Gallery - Start Bootstrap Template</title>
+    <title>Where To Watch?2:-o</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -40,9 +40,29 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
-            </div>
-            <button type="button" id="submit-btn" class="jab">JABButton</button>
+                <a class="navbar-brand" href="#">
+                    <img src="./images/logo/Where2Watch2.png" alt="?2:o">
+                </a>
+
+                <a class="navbar-brand" href="#"> <h2>Where 2 Watch?</h2></a>
+
+                <form id="formSearchMovies" class="navbar-brand" role="search">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" name="srch-term" id="searchTerm">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                    </div>
+                </form>
+
+
+
+
+<!--             <a class="brand" href="#">
+            <img src="./images/logo/Where2Watch2.png" width="50%" alt="">
+            </a> -->
+        </div>
+            <!-- <button type="button" id="submit-btn" class="jab">JABButton</button> -->
                 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -57,9 +77,28 @@
                         <a href="#">Contact</a>
                     </li>
                 </ul>
+<!--                 <form id="formSearchMovies" class="navbar-form" role="search">
+                    <div class="input-group pull-right">
+                        <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                    </div>
+                </form>
+ -->
             </div>
-            <!-- /.navbar-collapse -->
-        </div>
+<!--             <div class="col-sm-3 col-md-3 pull-right">
+                <form id="formSearchMovies" class="navbar-form" role="search">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+ -->        <!-- /.navbar-collapse -->
+
         <!-- /.container -->
     </nav>
 
