--- a/index.html
+++ b/index.html
@@ -101,10 +101,8 @@
 
         <!-- /.container -->
     </nav>
-
     <!-- Page Content -->
     <div class="container">
-
         <div class="row" id="thumbNailsContainer">
 
             <div class="col-lg-12">
@@ -120,7 +118,20 @@
         </div>
 
         <hr>
-
+        <table data-toggle="table">
+            <thead>
+                <tr>
+                    <th data-field="fruit" data-sortable="true">Item</th>
+                    <th data-field="date"  data-sortable="true" data-sort-name="_date_data" data-sorter="monthSorter">Date</th>
+                    <th data-field="type"  data-sortable="true">Type</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>Pear  </td><td data-month="1">January</td> <td>Fruit</td></tr>
+                <tr><td>Carrot  </td><td data-month="1">February</td> <td>Vegetable</td></tr>
+                <tr><td>Apple  </td><td data-month="1">March</td> <td>Fruit</td></tr>
+            </tbody>
+        </table>
         <!-- Footer -->
         <footer>
             <div class="row">
