Video providers added
Video providers added. Images have video provider class added.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+
+
+
+
                     <li>
                         <a href="#">About</a>
                     </li>
@@ -75,6 +79,37 @@
                     </li>
                     <li>
                         <a href="#">Contact</a>
+                    </li>
+
+
+
+
+
+
+
+
+                    <li>
+                        <!-- <a href="#">About</a> -->
+                    <div class="checkbox-inline">
+                      <label><input type="checkbox" value="">Jelly</label>
+                    </div>
+                    </li>
+                    <li>
+                        <!-- <a href="#">Services</a> -->
+                        <div class="checkbox-inline">
+                          <label><input type="checkbox" value="">Jelly</label>
+                        </div>
+                    </li>
+                    <li>
+                        <!-- <a href="#">Contact</a> -->
+                        <div class="checkbox-inline">
+                          <label><input type="checkbox" value="">Ice cream</label>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="checkbox-inline">
+                          <label><input type="checkbox" value="" disabled>Coffee</label>
+                        </div>
                     </li>
                 </ul>
 <!--                 <form id="formSearchMovies" class="navbar-form" role="search">
