Started adding providers control.
Adding the providers to check boxes.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
 
         <hr>
-        <table data-toggle="table">
+<!--         <table data-toggle="table">
             <thead>
                 <tr>
                     <th data-field="fruit" data-sortable="true">Item</th>
@@ -166,7 +166,7 @@
                 <tr><td>Carrot  </td><td data-month="1">February</td> <td>Vegetable</td></tr>
                 <tr><td>Apple  </td><td data-month="1">March</td> <td>Fruit</td></tr>
             </tbody>
-        </table>
+        </table> -->
         <!-- Footer -->
         <footer>
             <div class="row">
