Dynamically displays VideoProviders

--- a/index.html
+++ b/index.html
@@ -66,11 +66,8 @@
                 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-
-
-
-
+                <ul class="nav navbar-nav" id="videoProviderFilters">
+<!-- 
                     <li>
                         <a href="#">About</a>
                     </li>
@@ -80,28 +77,37 @@
                     <li>
                         <a href="#">Contact</a>
                     </li>
-
-
-
-
-
-
-
-
                     <li>
-                        <!-- <a href="#">About</a> -->
+
+ -->
+                    <li class="videoProviderFilter">
+                      <label><input type="checkbox" value="">videoProviderFilterTemplate</label>
+                    </li>
+<!-- 
+                    <li>
+                      <label class="videoProviderFilter"><input type="checkbox" value="">Netflix</label>
+                    </li>
+                    <li>
+                      <label class="videoProviderFilter"><input type="checkbox" value="">Amazon</label>
+                    </li>
+                    <li>
+                      <label class="videoProviderFilter"><input type="checkbox" value="">XFinity</label>
+                    </li>
+                    <li>
+                      <label class="videoProviderFilter"><input type="checkbox" value="">Hulu</label>
+                    </li>
+ -->                    
+<!--                     <li>
                     <div class="checkbox-inline">
                       <label><input type="checkbox" value="">Jelly</label>
                     </div>
                     </li>
                     <li>
-                        <!-- <a href="#">Services</a> -->
                         <div class="checkbox-inline">
                           <label><input type="checkbox" value="">Jelly</label>
                         </div>
                     </li>
                     <li>
-                        <!-- <a href="#">Contact</a> -->
                         <div class="checkbox-inline">
                           <label><input type="checkbox" value="">Ice cream</label>
                         </div>
@@ -110,7 +116,7 @@
                         <div class="checkbox-inline">
                           <label><input type="checkbox" value="" disabled>Coffee</label>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
 <!--                 <form id="formSearchMovies" class="navbar-form" role="search">
                     <div class="input-group pull-right">
