--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Where2Watch.com 2017</p>
                 </div>
             </div>
         </footer>
